Release Notes

* 9/12/2017
  * locking a file in getEventRanges

* 8/30/2017
  * metadata registration for ES files

* 8/17/2017
  * added registerEsFiles
  * changed AdderAtlas to catch InvalidRSEExpression

* 8/15/2017
  * removed sleep in copyArchive
  * removed FOR UPDATE when counting events for now

* 8/9/2017
  * fixed ppE to exclusively count num of unprocessed events

* 8/8/2017
  * improved setMerge to try local if remote is unavailable
  * fixed ppE to keep job status when old job is closed in jobsDefined/Waiting
  * improved ppE to take unifiedPQ into account
  * fixed ppE to set resource_type to merge

* 7/26/2017
  * setting cancelled/failed to es_killed/es_aborted
  * not to kill consumers in inactive sites when associated consumers are active

* 7/25/2017
  * added protection against duplicated submission by group users
  * added blank pilots to harvesterCtl

* 7/17/2017
  * changed ES merge to choose sites with wnconnectivity

* 7/12/2017
  * added background and resourceType in getJob
  * setting background-able flag

* 7/10/2017
  * added command_lock stuff

* 7/6/2017
  * added tighter isolation for check of concurrent running consumers

* 7/3/2017
  * added checkJobStatus

* 6/29/2017
  * added reportWorkerStats and harvesterCtl

* 6/26/2017
  * WQ-GS alignment

* 5/26/2017
  * fixed killJob with keepUnmerged not to discard evens
  * changed SetupAtlas to make _sub when esMergeOnOS is used

* 5/23/2017
  * changed retryJob to reset computingSite to ES merge jobs

* 5/17/2017
  * introduced timeout for throttled jobs
  * changed ES merge to avoid jobseed=es

* 5/8/2017
  * added nSimEvents
  * changed managed to fail when nevents is not set

* 5/3/2017
  * fixed eventStatus=merged for objStore_ID=None

* 5/2/2017
  * added unified PQs
  * added inFilePosEvtNum
  * fixed ppE not to duplicate ES merge jobs

* 4/25/2017
  * fake co-jumbo
  * added path_convention

* 4/24/2017
  * resource_type tagging

* 4/18/2017
  * added subDeleter

* 4/14/2017