@@ -1,5 +1,8 @@
 Release Notes
 
+* 9/26/2017
+  * using DATADISK for analysis staging-in
+
 * 9/12/2017
   * locking a file in getEventRanges
 
